# blue-agave

./: .gitattributes  pyproject.toml  tasks.py
.github/workflow/: deploy_site.yml
.github/workflows/: deploy_site.yml
source/: .activity_sets.rst.swp  .index.rst.swp  activity_sets.rst  bbx_setup.rst  conf.py  demo.rst  index.rst  introduction.rst  rey_setup.rst  xx
source/_templates/: footer.html
